--- a/core/app/assets/stylesheets/admin/shared/_typography.scss
+++ b/core/app/assets/stylesheets/admin/shared/_typography.scss
@@ -27,6 +27,10 @@ a {
   text-decoration: none;
   line-height: inherit;
 
+  &, &:hover, &:active, &:visited, &:focus {
+    outline: none;
+  }
+
   &:hover {
     color: $color-link-hover;
   }
